fixed firstLoading.css bug. problem added when we added more content on main page. So we could scroll down and see material behind loader while loading.
added merch content on main page.

--- a/src/main/styles/firstLoading.css
+++ b/src/main/styles/firstLoading.css
@@ -3,13 +3,20 @@
     width: 100%;
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     z-index: 99999;
     display: grid;
     place-items: center;
     align-items: center;
     background: white;
 }
+{/*
+position fixed
+gives us opportunity to hide materials while loading first laoder..
+without fixed we will take absolute. which means.. if you scroll down
+while loading is going you will see content behind loading which is not finished yet.
+*/}
+
 
 @media (max-width: 720px) {
     .loading-image {
